add desktopSupported flag. replace deprecated URL.